<resources>
    <string name="app_name">HideoRadio</string>
    <string name="title_activity_episode_detail">EpisodeDetail</string>

    <string name="sample_episode_title">第322回 - 小島秀夫の「ヒデラジ」…2013年ドラマの話をしよう（新年回後編）</string>
    <string name="sample_episode_description">第321回に引き続き、小島監督の注目の…2013年のドラマの話をしよう。ゲストは矢野健二さん。</string>
    <string name="sample_episode_duration">39:21</string>
    <string name="sample_episode_date">2013.12.31</string>

    <string name="episode_detail_header">episode detail header</string>

    <string name="playback_play_pause">playback play and pause</string>

    <string name="loading_episodes_text">Loading episodes</string>

    <string name="description">Description</string>

    <string name="network_error_text">ネットワークに繋がっていない可能性があります\nネットワーク設定を確認していただき\n再接続をしてみてください</string>
    <string name="reconnect_text">再接続</string>

    <string name="action_settings">Setting</string>
    <string name="title_activity_episode_search">EpisodeSearchActivity</string>
</resources>
