<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_episode_detail"
    tools:context="com.example.ideanote.hideoradio.activities.EpisodeDetailActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/episode_detail_header_height"
            android:scaleType="centerCrop"
            android:contentDescription="@string/episode_detail_header"
            android:src="@drawable/detail_header" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/episode_detail_header_height"
            android:background="@color/black_glass" />

        <TextView
            android:id="@+id/episode_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/episode_detail_header_height"
            android:gravity="center"
            tools:text="@string/sample_episode_title"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:layout_marginLeft="@dimen/space_large"
            android:layout_marginRight="@dimen/space_large"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/episode_detail_header_height">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true">
                
                <ImageButton
                    android:id="@+id/image_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerCrop"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@string/playback_play_pause"
                    android:src="@drawable/ic_action_playback_play" />

                <SeekBar
                    android:id="@+id/media_seek_bar"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/white"
                    tools:text="@string/sample_episode_duration"
                    android:layout_marginRight="@dimen/space_small"
                    />
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/description_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_small"
            android:layout_marginStart="@dimen/space_small"
            android:textSize="24sp"
            android:text="@string/description"
            />

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_large"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginRight="@dimen/space_large"
            android:layout_marginEnd="@dimen/space_large"
            android:layout_below="@+id/description_header"
            tools:text="@string/sample_episode_description"
            />

    </RelativeLayout>
</LinearLayout>
